--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "mobx": "^5.14.0",
+    "mobx-react": "^6.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-mobx": "^0.0.4",
     "react-scripts": "3.2.0",
     "typescript": "3.6.3"
   },
